Chapter 15 — Listing 15.4: DownstreamCollectors.java Demonstrates: downstream collectors composed inside groupingBy: